# wcsp-maxflow-kernelizer

./: .gitignore  CMakeLists.txt  README.md
apps/: benchmark_gpu.cu  benchmark_mac.cpp  e2e_pipeline_nokernelize.cpp  e2e_pipeline_test.cpp  kernelizer_maxflow_test.cpp  maxflow_cpu_demo.cpp  maxflow_gpu_topology_demo.cu  maxflow_gpu_worklist_demo.cu
data/easy/: easy.dimacs
data/hard/: hard.dimacs
data/medium/: medium.dimacs
scripts/: benchmark_to_excel.py  colab_benchmark.sh  colab_gpu_test.sh  colab_gpu_test_private.sh  gen_wcsp.py  gen_wcsp_lowarity.py  summarize_results.py
src/common/: types.h
src/cpu/: dimacs_reader.h  graph_csr.h  maxflow_static.h
src/gpu/: maxflow_gpu_common.h  maxflow_gpu_topology.h  maxflow_gpu_worklist.h
src/integration/: KernelizerMaxflow.h
